Updated deployment instructions

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
     <meta name="description" content="Gil Shwartz - A passionate DevOps Engineer focused on delivering reliable, automated infrastructure solutions." />
     <meta name="keywords" content="DevOps, automation, cloud infrastructure, CI/CD, Gil Shwartz, systems engineering" />
     <meta name="author" content="Gil Shwartz" />
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self'; 
+      script-src 'self'; 
+      style-src 'self' 'unsafe-inline'; 
+      img-src 'self' data:; 
+      font-src 'self'; 
+      object-src 'none'; 
+      frame-ancestors 'none'; 
+      upgrade-insecure-requests; 
+      block-all-mixed-content">
       
     <link rel="icon" type="image/jpg" href="/favicon.ico" />
     <title>Gil Shwartz</title>
