--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Gil Shwartz</title>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Gil Shwartz - A passionate DevOps Engineer focused on delivering reliable, automated infrastructure solutions." />
     <meta name="keywords" content="DevOps, automation, cloud infrastructure, CI/CD, Gil Shwartz, systems engineering" />
     <meta name="author" content="Gil Shwartz" />
       
-    <link rel="icon" type="image/jpg" href="/favicon.ico" />
-    <title>Gil Shwartz</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
   </head>
   <body>
     <div id="root">
