--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="DevOps, automation, cloud infrastructure, CI/CD, Gil Shwartz, systems engineering" />
     <meta name="author" content="Gil Shwartz" />
       
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../public/favicon.ico" />
 
   </head>
   <body>
